--- a/task3/style.css
+++ b/task3/style.css
@@ -1,9 +1,42 @@
+
+
+h1{
+margin-bottom: 100px;
+
+}
+
+
 #trafficLight {
-    width: 100px;
-    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     background: black;
   }
 
 
-  
+
+
+
+.frame {
+  position: relative;
+  display: grid;
+  place-items: center;
+  border: 3px solid blue;
+  width: 120px;
+  height: 350px;
+  margin:auto;
+  background-color: black;
+
+
+ }
+
+  .circle{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: black;
+    border: 5px solid blue;
+
+  }
